# ScraperCard

./: pyproject.toml  readme.md
brainscape_to_anki/: README.md  pyproject.toml  setup_project.ps1
brainscape_to_anki/application/services/: export_service.py  scraper_service.py
brainscape_to_anki/application/use_cases/: scrape_to_anki.py
brainscape_to_anki/brainscape_to_anki/application/services/: export_service.py  scraper_service.py
brainscape_to_anki/brainscape_to_anki/application/use_cases/: scrape_to_anki.py
brainscape_to_anki/brainscape_to_anki/domain/interfaces/: exporter.py  scraper.py
brainscape_to_anki/brainscape_to_anki/domain/models/: deck.py
brainscape_to_anki/brainscape_to_anki/infrastructure/exporters/: anki_exporter.py
brainscape_to_anki/brainscape_to_anki/infrastructure/scrapers/: brainscape_scraper.py
brainscape_to_anki/brainscape_to_anki/presentation/: main.py
brainscape_to_anki/brainscape_to_anki/presentation/gui/: main_window.py
brainscape_to_anki/brainscape_to_anki/presentation/gui/components/: drop_zone.py
brainscape_to_anki/domain/models/: flashcard.py
brainscape_to_anki/infrastructure/exporters/: anki_exporter.py
brainscape_to_anki/infrastructure/scrapers/: brainscape_scraper.py
brainscape_to_anki/presentation/: main.py
brainscape_to_anki/presentation/gui/: main_window.py
brainscape_to_anki/presentation/gui/components/: html_processor.py  simple_drop_zone.py
